// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Banners|AlertBanner default 1`] = `
<section
  className="sc-bxivhb eMtVEh"
>
  <div
    className="sc-EHOje jtyqUw"
  >
    <p>
      alert text
      <button
        className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-raised-15 sc-ifAKCX bqdATS sc-bdVaJa iRGXdW"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-2 label"
        >
          button text
        </span>
      </button>
    </p>
  </div>
</section>
`;

exports[`Storyshots Banners|ErrorSuccessBanner error 1`] = `
<div
  className="sc-gzVnrw fvefVY"
  color="rgba(193, 54, 63, 1)"
>
  <div
    className="sc-htoDjs hiEdTM"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-30 root styled-icon sc-VigVT bkqdLp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    error
  </div>
  <button
    className="MuiButtonBase-root-65 MuiButton-root-39 MuiButton-contained-50 MuiButton-raised-53 sc-dnqmqq ibEVtO sc-bdVaJa iRGXdW"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-40 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-30 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Banners|ErrorSuccessBanner success 1`] = `
<div
  className="sc-gzVnrw iVbaaL"
  color="rgba(45, 189, 154, 1)"
>
  <div
    className="sc-htoDjs hiEdTM"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-68 root styled-icon sc-gqjmRU kVDmhf"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    success
  </div>
  <button
    className="MuiButtonBase-root-103 MuiButton-root-77 MuiButton-contained-88 MuiButton-raised-91 sc-dnqmqq ibEVtO sc-bdVaJa iRGXdW"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-78 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-68 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|BaseButton default 1`] = `
<button
  className="MuiButtonBase-root-132 MuiButton-root-106 MuiButton-contained-117 MuiButton-raised-120 sc-bdVaJa iRGXdW"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-107 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-135 root styled-icon sc-jTzLTM hcMwfQ"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    label text
  </span>
</button>
`;

exports[`Storyshots Buttons|IconButton default 1`] = `
<button
  className="MuiButtonBase-root-150 MuiIconButton-root-144"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiIconButton-label-149"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-153 root styled-icon sc-kEYyzF hPdnBQ"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root-162"
  />
</button>
`;

exports[`Storyshots Buttons|IconButton disabled 1`] = `
<button
  className="MuiButtonBase-root-175 MuiButtonBase-disabled-176 MuiIconButton-root-169 MuiIconButton-disabled-173"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiIconButton-label-174"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-178 root styled-icon sc-kkGfuU dSvbhl"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots Buttons|PrimaryButton default 1`] = `
<button
  className="MuiButtonBase-root-213 MuiButton-root-187 MuiButton-contained-198 MuiButton-raised-201 sc-fjdhpX jDppZL sc-bdVaJa iRGXdW"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-188 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-216 root styled-icon sc-jzJRlG PNdqj"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    label text
  </span>
</button>
`;

exports[`Storyshots Buttons|SecondaryButton default 1`] = `
<button
  className="MuiButtonBase-root-251 MuiButton-root-225 MuiButton-contained-236 MuiButton-raised-239 sc-cSHVUG SJUYE sc-bdVaJa iRGXdW"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-226 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-254 root styled-icon sc-kAzzGY erAjjA"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    label text
  </span>
</button>
`;

exports[`Storyshots Buttons|TextButton default 1`] = `
<button
  className="MuiButtonBase-root-289 MuiButton-root-263 MuiButton-contained-274 MuiButton-raised-277 sc-htpNat fzSZoe sc-bdVaJa iRGXdW"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-264 label"
  >
    label text
  </span>
</button>
`;

exports[`Storyshots Cards|BaseCard default 1`] = `
<div
  className="MuiPaper-root-293 MuiPaper-elevation1-296 MuiPaper-rounded-294 MuiCard-root-292 card sc-kgoBCf gvAMrx"
>
  <div
    style={
      Object {
        "padding": "20px",
      }
    }
  >
    card content
  </div>
</div>
`;

exports[`Storyshots Cards|ContainerWrappedCard default 1`] = `
<div
  className="MuiPaper-root-320 paper MuiPaper-elevation2-324 MuiPaper-rounded-321 sc-chPdSV ibrajz"
>
  <div
    className="MuiPaper-root-320 MuiPaper-elevation1-323 MuiPaper-rounded-321 MuiCard-root-347 card sc-kgoBCf gvAMrx"
  >
    <div
      style={
        Object {
          "padding": "20px",
        }
      }
    >
      card content
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards|TitleCard default 1`] = `
<div
  className="MuiPaper-root-349 MuiPaper-elevation1-352 MuiPaper-rounded-350 MuiCard-root-348 card sc-kGXeez guLMeh"
  color="#4B9FE6"
>
  <h1>
    card content
  </h1>
</div>
`;

exports[`Storyshots H1|H1 default 1`] = `
<h1
  className="sc-kpOJdX hzZTGW"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H1 Header Text
</h1>
`;

exports[`Storyshots H2|H2 default 1`] = `
<h2
  className="sc-dxgOiQ coQbAd"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H2 Header Text
</h2>
`;

exports[`Storyshots H3|H3 default 1`] = `
<h3
  className="sc-ckVGcZ bJUhKy"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H3 Header Text
</h3>
`;

exports[`Storyshots Links|BaseLink default 1`] = `
<a
  className="sc-jKJlTe cQYFfE"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  Base Link
</a>
`;

exports[`Storyshots Links|BaseLink icon 1`] = `
<a
  className="sc-jKJlTe cQYFfE"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-376 root styled-icon sc-iAyFgw ibNxZu"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  Base Link
</a>
`;

exports[`Storyshots Links|GhostButtonLink default 1`] = `
<a
  className="sc-eNQAEJ KnEAG sc-jKJlTe cQYFfE"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  Ghost Button Link
</a>
`;

exports[`Storyshots Links|GhostButtonLink icon 1`] = `
<a
  className="sc-eNQAEJ KnEAG sc-jKJlTe cQYFfE"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-385 root styled-icon sc-hSdWYo jtaFmI"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  Ghost Button Link
</a>
`;

exports[`Storyshots ListItem|BaseListItem button 1`] = `
<div
  className="MuiButtonBase-root-460 MuiListItem-root-448 MuiListItem-default-451 MuiListItem-gutters-456 MuiListItem-button-457"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-463 item-text"
  >
    <span
      className="MuiTypography-root-469 MuiTypography-body1-478 MuiListItemText-primary-466"
    >
      List Item Button
    </span>
  </div>
  <span
    className="MuiTouchRipple-root-505"
  />
</div>
`;

exports[`Storyshots ListItem|BaseListItem default 1`] = `
<li
  className="MuiListItem-root-394 MuiListItem-default-397 MuiListItem-gutters-402"
  disabled={false}
>
  <div
    className="MuiListItemText-root-406 item-text"
  >
    <span
      className="MuiTypography-root-412 MuiTypography-body1-421 MuiListItemText-primary-409"
    >
      Default List Item
    </span>
  </div>
</li>
`;

exports[`Storyshots ListItem|BaseListItem disabled 1`] = `
<li
  className="MuiListItem-root-512 MuiListItem-default-515 MuiListItem-gutters-520 MuiListItem-disabled-518"
  disabled={true}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-524 item-text"
  >
    <span
      className="MuiTypography-root-530 MuiTypography-body1-539 MuiListItemText-primary-527"
    >
      List Item Disabled
    </span>
  </div>
</li>
`;

exports[`Storyshots ListItem|BaseListItem icon 1`] = `
<li
  className="MuiListItem-root-566 MuiListItem-default-569 MuiListItem-gutters-574"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-578 item-text"
  >
    <span
      className="MuiTypography-root-584 MuiTypography-body1-593 MuiListItemText-primary-581"
    >
      List Item w/ Icon
    </span>
  </div>
  <div
    className="MuiListItemIcon-root-620"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-621 root styled-icon sc-eHgmQL lbphMB"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</li>
`;

exports[`Storyshots ListItem|BaseListItem selected 1`] = `
<li
  className="MuiListItem-root-630 MuiListItem-default-633 MuiListItem-gutters-638 MuiListItem-selected-641"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-642 item-text"
  >
    <span
      className="MuiTypography-root-648 MuiTypography-body1-657 MuiListItemText-primary-645"
    >
      List Item Selected
    </span>
  </div>
</li>
`;

exports[`Storyshots Paper|BasePaper default 1`] = `
<div
  className="MuiPaper-root-684 MuiPaper-elevation2-688 MuiPaper-rounded-685"
>
  <div
    style={
      Object {
        "padding": "20px",
      }
    }
  >
    paper content
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper default 1`] = `
<div
  className="MuiPaper-root-711 MuiPaper-elevation2-715 MuiPaper-rounded-712 sc-hMqMXs hkKQUG"
>
  <div
    style={
      Object {
        "padding": "20px",
      }
    }
  >
    paper content
  </div>
</div>
`;
